packages/neos-ui-link-editor-core/src/application/Dialog/style.module.css
.advancedContents {
    background: var(--colors-ContrastDarkest);
    border: 1px solid var(--colors-ContrastDark);
    padding: 1rem;
}

.advancedButton {
    color: var(--colors-ContrastBrightest);
    height: var(--spacing-GoldenUnit);
    padding: 0 var(--spacing-Full);
    vertical-align: middle;
    cursor: pointer;
    line-height: var(--spacing-GoldenUnit);
    background: var(--colors-ContrastDarkest);
    display: inline-flex;
    align-items: baseline;
    gap: 1ch;
    border: 1px solid var(--colors-ContrastDark);
    position: relative;
}

.advancedButton:hover {
    color: var(--colors-PrimaryBlue);
}

.advancedButton[disabled] {
    opacity: .5;
    cursor: not-allowed;

    &:hover {
        color: var(--colors-ContrastBrightest);
    }
}

.advancedButtonIsOpen {
    border-bottom: unset;
    /* hide the top border of the advanced contents below partially */
    &::after {
        content: '';
        width: 100%;
        height: 1px;
        bottom: -1px;
        background: var(--colors-ContrastDarkest);
        left: 0;
        position: absolute;
    }
}

.checkboxLabel {
    display: flex;
}

.checkboxColumns {
    display: grid;
    gap: var(--spacing-Full);
    grid-template-columns: repeat(auto-fit, minmax(min(200px, 100%), 1fr));
}

